--- a/static/style.css
+++ b/static/style.css
@@ -22,7 +22,8 @@ h1 {
 p {
     font-size: 1.5rem;
     color: #555;
-    margin-bottom: 20px;
+    margin-bottom: 2rem;
+    margin-top: 0;
 }
 
 /* Formulier stijl */
