--- a/templates/index.html
+++ b/templates/index.html
@@ -3,13 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Auto Wash Workflow</title>
+    <title>Auto Wash Workflow App</title>
 
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
 
 </head>
 <body>
-    <h1>Huidige taak</h1>
+    <h1>Auto Wash Workflow App</h1>
+    <h3>Huidige taak:</h3>
     <p>{{ task }}</p>
     <form action="{{ url_for('complete_task') }}" method="POST">
         <button type="submit">Mark as Completed</button>
